fixed letter spacing for homepage card

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -141,6 +141,7 @@ table td {
 
     text-align: center;
     font-family: 'IBM Plex Serif';
+    letter-spacing: normal;
 }
 
 .homeCard > * {
